================= Unreleased ==================
; Change ; Minor ; Compiler ; #5549
Moved static variable declarations for generated temporaries to
generated struct in order to improve multithreading capabilities.

================= Stable-2018-01-24 ==================
; Change ; Minor ; PyFMI ; #5548
Deprecated get_log_file_name in favour of get_log_filename

; Change ; Minor ; MSL ; #5546
Patched MSL resources to take into account the NO_MUTEX define.

; Feature ; Minor ; PyFMI ; #5545
Implemented support for injecting custom logging functionality

; Change ; Minor ; Compiler ; #5542
Changed license for code generation templates to CPL

; Fixed ; Minor ; Compiler ; #5539
Changed how qualifiedname works for multidimensional arrays by adding 
 special case for InstArrayComponentDecl. 

; Feature ; Minor ; PyFMI ; #5537
Added the possibility to retrieve unit and display unit name for FMI2 
and also its value in the display unit.

================= Stable-2018-01-12 ==================
; Feature ; Major ; Compiler; #4797 
Full string support

; Fixed ; Minor ; Compiler ; #5527
Fixed representation of size expressions in function call types

; Fixed ; Minor ; compiler ; #5530
Fixed crash bug in FMI XML generator where alias eliminated high order
temporary derivatives which were orphan caused problems.

; Fixed ; Minor ; Compiler ; #5529
Fixed bug in FMI XML generation where derivative attribute for second order
derivatives (or higher) pointed to the wrong variable.

================= Stable-2017-12-19 ==================
; Fixed ; Minor ; Compiler; #5526 
Fixed null pointer in evaluation of partial function

; Feature ; Major ; Compiler; #4797 
Support for string parameters

; Change ; Major ; Python ; #5167
Changed the default FMI version when compiling FMUs from Python to 2.0
instead of 1.0.

; Feature ; Minor ; PyFMI ; #5521
Added the possibility to directly retrieve a Scalar Variable class instance.

; Feature ; Minor ; Documentation; #5517 